# Titanic_predictor

./: .gitignore  README.md  environment.yml  model_card.md
notebooks/: 01_eda.ipynb  02_baseline_ml.ipynb
sprint_1/notebooks/: 01_eda.ipynb  02_baseline_ml.ipynb
sprint_1/src/Titanic_predictor/: .gitkeep
sprint_1/tests/: smoke_test.py
tests/: smoke_test.py
titanic_predictor/: README.md  pyproject.toml
titanic_predictor/conf/base/: catalog.yml  parameters.yml
titanic_predictor/src/titanic_predictor/: pipeline_registry.py
titanic_predictor/src/titanic_predictor/pipelines/data_science/: nodes.py  pipeline.py
titanic_predictor/tests/: test_clean_node.py  test_split_node.py
